--- a/src/index.css
+++ b/src/index.css
@@ -1,41 +1,57 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  height:100hv;
+
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* border-collapse: collapse; */
+  height: 920px;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 /* 
 #joystick{
 border-style:solid;
 }; */
-#root{
-background: linear-gradient(
-  to left,
-  rgb(221, 223, 230),
-  rgba(90, 103, 179, 0.836)
-);
+#root {
+  height:100vh;
+ background-color: #cfd8dc  ;
 }
-#home{
-height: 1024px;
+
+h5 {
+  /* color: rgb(0, 0, 0); */
 }
-h5{
-color:rgb(0, 0, 0);
+h3 {
+  /* color: rgba(255, 255, 255);
+  text-shadow: 0 0 6px #000000; */
 }
-h3{
-  color:  rgba(100, 103, 190, 0.836)
-  ;
-}
-#map{
-align-items: center;
-border-style:solid ;
-border-width: 20px;
-border-radius: 20px;
-border-color: rgb(89, 105, 177);
+#map {
+  align-items: center;
+  border-style: solid;
+  border-width: 10px;
+  border-radius: 10px;
+  /* border-color: rgb(0, 0, 0); */
+  border-collapse: collapse;
+  position: absolute;
 
 }
+h1 {
+    /* text-shadow: 0 0 6px #000000;color: rgba(255, 255, 255); */
+
+}
+#main_page{
+padding-top: 20px;
+
+}
+/* #logo{
+width: 30px;
+height:400px;
+} */
+/* #connection{
+  border: 100px;
+} */
